--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -29,37 +29,30 @@
     </div>
     <div class="wedding-announcement">
       <div class="couple-name-merried-text">
-        <h2 class="wow slideInUp" data-wow-duration="1s">Suntina &amp; Famico</h2>
+        <h2 class="wow slideInUp" data-wow-duration="1s">Богдан &amp; Юля</h2>
         <div class="married-text wow fadeIn" data-wow-delay="1s">
           <h4 class="">
-            <span class=" wow fadeInUp" data-wow-delay="1.05s">W</span>
-            <span class=" wow fadeInUp" data-wow-delay="1.10s">e</span>
-            <span class=" wow fadeInUp" data-wow-delay="1.15s">'</span>
-            <span class=" wow fadeInUp" data-wow-delay="1.20s">r</span>
-            <span class=" wow fadeInUp" data-wow-delay="1.25s">e</span>
+            <span class=" wow fadeInUp" data-wow-delay="1.05s">М</span>
+            <span class=" wow fadeInUp" data-wow-delay="1.10s">и</span>
             <span>&nbsp;</span>
-            <span class=" wow fadeInUp" data-wow-delay="1.30s">g</span>
-            <span class=" wow fadeInUp" data-wow-delay="1.35s">e</span>
-            <span class=" wow fadeInUp" data-wow-delay="1.40s">t</span>
-            <span class=" wow fadeInUp" data-wow-delay="1.45s">t</span>
-            <span class=" wow fadeInUp" data-wow-delay="1.50s">i</span>
-            <span class=" wow fadeInUp" data-wow-delay="1.55s">n</span>
-            <span class=" wow fadeInUp" data-wow-delay="1.60s">g</span>
-            <span>&nbsp;</span>
-            <span class=" wow fadeInUp" data-wow-delay="1.65s">m</span>
-            <span class=" wow fadeInUp" data-wow-delay="1.70s">a</span>
-            <span class=" wow fadeInUp" data-wow-delay="1.75s">r</span>
-            <span class=" wow fadeInUp" data-wow-delay="1.80s">r</span>
-            <span class=" wow fadeInUp" data-wow-delay="1.85s">i</span>
-            <span class=" wow fadeInUp" data-wow-delay="1.90s">e</span>
-            <span class=" wow fadeInUp" data-wow-delay="1.95s">d</span>
+            <span class=" wow fadeInUp" data-wow-delay="1.15s">о</span>
+            <span class=" wow fadeInUp" data-wow-delay="1.20s">д</span>
+            <span class=" wow fadeInUp" data-wow-delay="1.25s">р</span>
+            <span class=" wow fadeInUp" data-wow-delay="1.30s">у</span>
+            <span class=" wow fadeInUp" data-wow-delay="1.35s">ж</span>
+            <span class=" wow fadeInUp" data-wow-delay="1.40s">у</span>
+            <span class=" wow fadeInUp" data-wow-delay="1.45s">є</span>
+            <span class=" wow fadeInUp" data-wow-delay="1.50s">м</span>
+            <span class=" wow fadeInUp" data-wow-delay="1.55s">о</span>
+            <span class=" wow fadeInUp" data-wow-delay="1.60s">с</span>
+            <span class=" wow fadeInUp" data-wow-delay="1.65s">я</span>
           </h4>
         </div>
         <!-- <i class="fa fa-heart"></i> -->
       </div>
       <div class="save-the-date">
-        <h4>Save the date</h4>
-        <span class="date">25 DEC 2017</span>
+        <h4>Запам'ятай дату</h4>
+        <span class="date">05 ЖОВ 2018</span>
       </div>
     </div>
   </section>
@@ -76,7 +69,7 @@
             <span class="icon-bar"></span>
           </button>
           <div class="couple-logo">
-            <h1><a href="#home">S <i class="fi flaticon-shape-1"></i> F</a></h1>
+            <h1><a href="#home">Б <i class="fi flaticon-shape-1"></i> Ю</a></h1>
           </div>
         </div>
         <div id="navbar" class="navbar-collapse collapse navbar-right navigation-holder">
@@ -266,7 +259,7 @@
         <div class="col col-xs-12">
           <div class="section-title">
             <div class="vertical-line"><span><i class="fi flaticon-two"></i></span></div>
-            <h2>Wedding events</h2>
+            <h2>Весільні події</h2>
           </div>
         </div>
       </div> <!-- end section-title -->
@@ -634,7 +627,7 @@
         <div class="col col-xs-12">
           <div class="section-title-white">
             <div class="vertical-line"><span><i class="fi flaticon-two"></i></span></div>
-            <h2>Join our party</h2>
+            <h2>Приєднуйся до свята</h2>
           </div>
         </div>
       </div> <!-- end section-title -->
