--- a/app/assets/stylesheets/site/index.css
+++ b/app/assets/stylesheets/site/index.css
@@ -2799,7 +2799,7 @@ a:focus {
 }
 
 .cta h2 span {
-  font-family: "Dosis", sans-serif;
+  font-family: "Country_Western_Script_Black", sans-serif;
   font-size: 30px;
   font-size: 1.66667rem;
   display: block;
