--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -75,12 +75,12 @@
         <div id="navbar" class="navbar-collapse collapse navbar-right navigation-holder">
           <button class="close-navbar"><i class="fa fa-close"></i></button>
           <ul class="nav navbar-nav">
-            <li><a href="#home">Home</a></li>
-            <li><a href="#couple">Couple</a></li>
-            <li><a href="#story">Story</a></li>
-            <li><a href="#events">Events</a></li>
+            <li><a href="#home">Головна</a></li>
+            <li><a href="#couple">Половинки</a></li>
+            <li><a href="#story">Історія</a></li>
+            <li><a href="#events">Події</a></li>
             <!--<li><a href="#people">People</a></li>-->
-            <li><a href="#rsvp">RSVP</a></li>
+            <li><a href="#rsvp">Реєстрація</a></li>
           </ul>
         </div><!-- end of nav-collapse -->
       </div><!-- end of container -->
@@ -98,9 +98,9 @@
             </div>
             <div class="details">
               <div class="details-inner">
-                <h3>The groom</h3>
+                <h3>Наречений</h3>
                 <p>Hi I am suntina , dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.</p>
-                <span class="signature">Suntina</span>
+                <span class="signature">Богдан</span>
                 <ul class="social-links">
                   <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                   <li><a href="#"><i class="fa fa-twitter"></i></a></li>
@@ -113,9 +113,18 @@
           <div class="gb bride">
             <div class="details">
               <div class="details-inner">
-                <h3>The Bride</h3>
-                <p>Hi I am suntina , dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.</p>
-                <span class="signature">Famico</span>
+                <h3>Наречена</h3>
+                <p>
+                  «А чому б і ні?» - саме такими словами десь на Житомирщині почалась її шалена пригода. Вирішено!!!
+                </p>
+                <p>
+                  Поїхати у Львів, вступити в академію, знайти друзів, та вчитись – план виконано на 100%. Можна вважати, що життя вдалось!
+                </p>
+                <p>
+                  Спекотне літо - діло таке… пам`ятаєте ці романтичні заходи сонця, п`янкий аромат теплого повітря?!
+                  Напевно, час настав. В руках горнятко з квітковим чаєм, а в телефоні відкрита закладка з сайта знайомств…
+                </p>
+                <span class="signature">Юлія (завжди 18)</span>
                 <ul class="social-links">
                   <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                   <li><a href="#"><i class="fa fa-twitter"></i></a></li>
@@ -138,7 +147,7 @@
     <div class="container">
       <div class="row">
         <div class="col col-md-4">
-          <h2><span>We are waiting for.....</span> The adventure</h2>
+          <h2><span>В очікуванні.....</span> На казку</h2>
         </div>
         <div class="col col-md-7 col-md-offset-1">
           <div class="count-down-clock">
@@ -157,7 +166,7 @@
         <div class="col col-xs-12">
           <div class="section-title">
             <div class="vertical-line"><span><i class="fi flaticon-two"></i></span></div>
-            <h2>Our love story</h2>
+            <h2>Наша історія кохання</h2>
           </div>
         </div>
       </div> <!-- end section-title -->
@@ -167,7 +176,7 @@
             <div class="row">
               <div class="col col-md-6">
                 <div class="story-text right-align-text">
-                  <h3>First meet</h3>
+                  <h3>Перша зустріч</h3>
                   <span class="date">Jan 12 2017</span>
                   <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart. I am alone, and feel the charm of existence in this spot, which was created for the bliss of souls like mine. I am so happy, my dear friend, </p>
                 </div>
@@ -190,7 +199,7 @@
                                         <i class="fa fa-heart"></i>
                                     </span>
                 <div class="story-text">
-                  <h3>First date</h3>
+                  <h3>Перше побачення</h3>
                   <span class="date">Feb 14 2017</span>
                   <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart. I am alone, and feel the charm of existence in this spot, which was created for the bliss of souls like mine. I am so happy, my dear friend, </p>
                 </div>
@@ -202,7 +211,7 @@
                                         <i class="fa fa-heart"></i>
                                     </span>
                 <div class="story-text right-align-text">
-                  <h3>Proposal</h3>
+                  <h3>Пропозиція</h3>
                   <span class="date">Apr 14 2017</span>
                   <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart. I am alone, and feel the charm of existence in this spot, which was created for the bliss of souls like mine. I am so happy, my dear friend, </p>
                 </div>
@@ -229,7 +238,7 @@
                                         <i class="fa fa-heart"></i>
                                     </span>
                 <div class="story-text">
-                  <h3>Enagagement</h3>
+                  <h3>Одруження</h3>
                   <span class="date">Jul 14 2017</span>
                   <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart. I am alone, and feel the charm of existence in this spot, which was created for the bliss of souls like mine. I am so happy, my dear friend, </p>
                 </div>
@@ -246,7 +255,7 @@
     <div class="container">
       <div class="row">
         <div class="col col-xs-12">
-          <h2><span>We are going to...</span> Celebrate Our Love</h2>
+          <h2><span>Ми збираємось...</span> Святкувати Наше Кохання</h2>
         </div>
       </div> <!-- end row -->
     </div> <!-- end container -->
@@ -267,34 +276,33 @@
         <div class="col col-lg-10 col-lg-offset-1">
           <div class="event">
             <div class="img-holder">
-              <%= image_tag('events/img-1.jpg', class: 'img img-responsive') %>
+              <%= image_tag('church_2.jpg', class: 'img img-responsive') %>
             </div>
             <div class="details">
-              <h3>The reception</h3>
+              <h3>Вінчання</h3>
               <ul>
                 <li><i class="fa fa-map-marker"></i> 32 big bro road, Chanpai, London.</li>
                 <li><i class="fa fa-clock-o"></i> Nov 25 2017, 9AM - 5PM</li>
               </ul>
               <p>when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. </p>
-              <a class="see-location-btn popup-gmaps" href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d25211.21212385712!2d144.95275648773628!3d-37.82748510398018!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad642af0f11fd81%3A0x5045675218ce7e0!2zTWVsYm91cm5lIFZJQyAzMDA0LCDgpoXgprjgp43gpp_gp43gprDgp4fgprLgpr_gpq_gprzgpr4!5e0!3m2!1sbn!2sbd!4v1503742051881">
-                See location <i class="fa fa-angle-right"></i>
+              <a class="see-location-btn popup-gmaps" href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2573.4280779607325!2d24.02922391570915!3d49.83441357939503!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x473add68a723c9a9%3A0xcaeb5c28125a941e!2z0KbQtdGA0LrQstCwINCf0L7QutGA0L7QstC4INCR0L7Qs9C-0YDQvtC00LjRhtGWLCDQstGD0LvQuNGG0Y8g0JzQuNGF0LDQudC70LAg0JPRgNGD0YjQtdCy0YHRjNC60L7Qs9C-LCAyLCDQm9GM0LLRltCyLCDQm9GM0LLRltCy0YHRjNC60LAg0L7QsdC70LDRgdGC0YwsIDc5MDAw!5e0!3m2!1suk!2sua!4v1533927345105">
+              Подивится на карті <i class="fa fa-angle-right"></i>
               </a>
             </div>
           </div>
           <div class="event">
             <div class="img-holder">
-              <%= image_tag('events/img-2.jpg', class: 'img img-responsive') %>
+              <%= image_tag('park_2.jpg', class: 'img img-responsive') %>
             </div>
             <div class="details">
-              <h3>Wedding party</h3>
+              <h3>Вечірка</h3>
               <ul>
                 <li><i class="fa fa-map-marker"></i> 32 big bro road, Chanpai, London.</li>
                 <li><i class="fa fa-clock-o"></i> Nov 25 2017, 9AM - 5PM</li>
               </ul>
               <p>when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. </p>
-              <!--TODO: CHANGE!!!!!-->
-              <a class="see-location-btn popup-gmaps" href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3152.0160484383277!2d144.99053291585201!3d-37.81309307975254!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad642ef89a7e023%3A0xb1353055e38c1ab8!2sNew+York+Tomato+Cafe!5e0!3m2!1sbn!2sbd!4v1503743893919">
-                See location <i class="fa fa-angle-right"></i>
+              <a class="see-location-btn popup-gmaps" href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2573.6962413668853!2d24.018871115709015!3d49.82937407939458!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x473add630a055555%3A0x4ae032d76a781d89!2sPark.+Art+of+Rest!5e0!3m2!1suk!2sua!4v1533927658339">
+                Подивится на карті <i class="fa fa-angle-right"></i>
               </a>
             </div>
           </div>
@@ -633,7 +641,7 @@
       </div> <!-- end section-title -->
       <div class="row content">
         <div class="col col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-          <p>Please reserve before December 16th, 2017.</p>
+          <p>Будь ласка, дай нам знати про намір приєднатися до 5го жовтня, 2018.</p>
 
           <%= render partial: 'survey_form' %>
 
@@ -649,17 +657,17 @@
         <div class="col col-xs-12">
           <div class="section-title-white">
             <div class="vertical-line"><span><i class="fi flaticon-two"></i></span></div>
-            <h2>Getting there</h2>
+            <h2>Як дістатися</h2>
           </div>
         </div>
       </div> <!-- end section-title -->
       <div class="row content">
         <div class="col col-md-6">
-          <h3>Transportation</h3>
+          <h3>Трансфер</h3>
           <p> industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s</p>
         </div>
         <div class="col col-md-6">
-          <h3>Accommodations</h3>
+          <h3>Проживання</h3>
           <p> industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s</p>
         </div>
       </div> <!-- end row -->
@@ -710,8 +718,8 @@
     <div class="container">
       <div class="row">
         <div class="col col-xs-12">
-          <h2>Forever and Always Our Love</h2>
-          <span>- Mick (The groom)</span>
+          <h2>Наше кохання назавжди</h2>
+          <span>- Богдан (Наречений)</span>
         </div>
       </div> <!-- end row -->
     </div> <!-- end container -->
