--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -99,13 +99,17 @@
             <div class="details">
               <div class="details-inner">
                 <h3>Наречений</h3>
-                <p>Hi I am suntina , dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.</p>
+                <p>
+                  Так…на початку 2000х було нелегко, але гітару та перший комп`ютер для улюбленого сина ніколи не шкода. Ну а далі пішло-поїхало… перша гра, навчання, перша програма, робота…
+                </p>
+                <p>
+                  Але струни звучать так по-осінньому самотньо…
+                  Весна. Вечір. Порожня квартира. Канапки. Сайт знайомств. Чарівна посмішка та зелені сяючі очі…
+                </p>
                 <span class="signature">Богдан</span>
                 <ul class="social-links">
-                  <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                  <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                  <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
-                  <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+                  <li><a target="_blank" href="https://www.facebook.com/kutkovybohdan"><i class="fa fa-facebook"></i></a></li>
+                  <li><a target="_blank" href="https://www.instagram.com/kutkovybohdan"><i class="fa fa-instagram"></i></a></li>
                 </ul>
               </div>
             </div>
@@ -126,15 +130,13 @@
                 </p>
                 <span class="signature">Юлія (завжди 18)</span>
                 <ul class="social-links">
-                  <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                  <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                  <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
-                  <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+                  <li><a target="_blank" href="https://www.facebook.com/profile.php?id=100008786742672"><i class="fa fa-facebook"></i></a></li>
+                  <li><a target="_blank" href="https://www.instagram.com/chornenka/"><i class="fa fa-instagram"></i></a></li>
                 </ul>
               </div>
             </div>
             <div class="img-holder wow fadeInRightSlow">
-              <%= image_tag('couple/img-2.jpg') %>
+              <%= image_tag('julia.jpg') %>
             </div>
           </div>
         </div>
@@ -176,14 +178,51 @@
             <div class="row">
               <div class="col col-md-6">
                 <div class="story-text right-align-text">
-                  <h3>Перша зустріч</h3>
-                  <span class="date">Jan 12 2017</span>
-                  <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart. I am alone, and feel the charm of existence in this spot, which was created for the bliss of souls like mine. I am so happy, my dear friend, </p>
+                  <h3>Знайомство</h3>
+                  <span class="date">ЧЕР 9 2015</span>
+                  <p>Вчасно написане просте «Привіт! Як справи?» перекрутило Землю на 360 градусів. І поки два серця тремтіли від хвилювання, за вікном з`явилась ще одна зірка.</p>
                 </div>
               </div>
               <div class="col col-md-6">
                 <div class="img-holder">
-                  <%= image_tag('story/img-1.jpg', class: 'img img-responsive') %>
+                  <%= image_tag('first_meet.jpg', height: '300', class: 'img img-responsive') %>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col col-md-6">
+                <div class="img-holder right-align-text">
+                  <%= image_tag('first_date.jpg', class: 'img img-responsive') %>
+                </div>
+              </div>
+              <div class="col col-md-6 text-holder">
+                                    <span class="heart">
+                                        <i class="fa fa-heart"></i>
+                                    </span>
+                <div class="story-text">
+                  <h3>Перше побачення</h3>
+                  <span class="date">ЧЕР 10 2015</span>
+                  <p>Він уважний та щасливий. Вона усміхнена та надзвичайно красива. Безкінечні розмови з присмаком ягідного смузі. Все життя в один день. «Тепер це наш Львів, та наш вечір»</p>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col col-md-6 text-holder right-heart">
+                                    <span class="heart">
+                                        <i class="fa fa-heart"></i>
+                                    </span>
+                <div class="story-text right-align-text">
+                  <h3>Пропозиція</h3>
+                  <span class="date">БЕР 15 2018</span>
+                  <p>Смачна вечеря в ресторані «Шопен». Атмосфера легкого джазу та п`янкого, трохи терпкого, вина. Це її день. На столі величезний букет улюблених білих троянд, а в таємничій кишені чекає маленька коробочка. Цей момент настав.
+                    Тихий вечір. Тільки він та вона. І проникливе: «Ти станеш моєю дружиною?»
+                  </p>
+                </div>
+              </div>
+              <div class="col col-md-6">
+                <div class="img-holder right-align-text story-slider">
+                  <%= image_tag('engagement_2.jpg', class: 'img img-responsive') %>
+                  <%= image_tag('engagement_1.jpg', class: 'img img-responsive') %>
                 </div>
               </div>
             </div>
@@ -199,48 +238,17 @@
                                         <i class="fa fa-heart"></i>
                                     </span>
                 <div class="story-text">
-                  <h3>Перше побачення</h3>
-                  <span class="date">Feb 14 2017</span>
-                  <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart. I am alone, and feel the charm of existence in this spot, which was created for the bliss of souls like mine. I am so happy, my dear friend, </p>
-                </div>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col col-md-6 text-holder right-heart">
-                                    <span class="heart">
-                                        <i class="fa fa-heart"></i>
-                                    </span>
-                <div class="story-text right-align-text">
-                  <h3>Пропозиція</h3>
-                  <span class="date">Apr 14 2017</span>
-                  <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart. I am alone, and feel the charm of existence in this spot, which was created for the bliss of souls like mine. I am so happy, my dear friend, </p>
-                </div>
-              </div>
-              <div class="col col-md-6">
-                <div class="img-holder right-align-text story-slider">
-                  <%= image_tag('story/img-7.jpg', class: 'img img-responsive') %>
-                  <%= image_tag('story/img-5.jpg', class: 'img img-responsive') %>
-                </div>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col col-md-6">
-                <div class="img-holder video-holder">
-                  <%= image_tag('story/img-8.jpg', class: 'img img-responsive') %>
-                  <!--TODO: CHANGE!!!-->
-                  <a href="https://www.youtube.com/embed/XSGBVzeBUbk?autoplay=1" data-type="iframe" class="video-play-btn">
-                    <i class="fa fa-play"></i>
-                  </a>
-                </div>
-              </div>
-              <div class="col col-md-6 text-holder">
-                                    <span class="heart">
-                                        <i class="fa fa-heart"></i>
-                                    </span>
-                <div class="story-text">
                   <h3>Одруження</h3>
-                  <span class="date">Jul 14 2017</span>
-                  <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart. I am alone, and feel the charm of existence in this spot, which was created for the bliss of souls like mine. I am so happy, my dear friend, </p>
+                  <span class="date">ЖОВ 05 2018</span>
+                  <p>
+                    День, коли Небесне Благословення одарує нашу вже «Сім’ю». Зворушливі «Клянусь» та священні обручки.
+                  </p>
+                  <p>
+                    А що ж далі…?!
+                  </p>
+                  <p>
+                    А далі вже нова історія. З щирими посмішками, солодкими поцілунками та запальними танцями…
+                  </p>
                 </div>
               </div>
             </div>
@@ -281,10 +289,12 @@
             <div class="details">
               <h3>Вінчання</h3>
               <ul>
-                <li><i class="fa fa-map-marker"></i> 32 big bro road, Chanpai, London.</li>
-                <li><i class="fa fa-clock-o"></i> Nov 25 2017, 9AM - 5PM</li>
+                <li><i class="fa fa-map-marker"></i> вулиця Михайла Грушевського, 2, Львів.</li>
+                <li><i class="fa fa-clock-o"></i> Жов 05 2018, 14:00 - 15:00</li>
               </ul>
-              <p>when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. </p>
+              <p>
+                Церква Покрови Богородиці (давніше костел святого Миколая, костел Пресвятої Трійці та святого Миколая Єпископа, тринітарський костел) — чинна церква, катедральний собор Львівської єпархії Української Православної Церкви Київського Патріархату, пам'ятка архітектури XVIII століття у Львові.
+              </p>
               <a class="see-location-btn popup-gmaps" href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2573.4280779607325!2d24.02922391570915!3d49.83441357939503!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x473add68a723c9a9%3A0xcaeb5c28125a941e!2z0KbQtdGA0LrQstCwINCf0L7QutGA0L7QstC4INCR0L7Qs9C-0YDQvtC00LjRhtGWLCDQstGD0LvQuNGG0Y8g0JzQuNGF0LDQudC70LAg0JPRgNGD0YjQtdCy0YHRjNC60L7Qs9C-LCAyLCDQm9GM0LLRltCyLCDQm9GM0LLRltCy0YHRjNC60LAg0L7QsdC70LDRgdGC0YwsIDc5MDAw!5e0!3m2!1suk!2sua!4v1533927345105">
               Подивится на карті <i class="fa fa-angle-right"></i>
               </a>
@@ -297,10 +307,13 @@
             <div class="details">
               <h3>Вечірка</h3>
               <ul>
-                <li><i class="fa fa-map-marker"></i> 32 big bro road, Chanpai, London.</li>
-                <li><i class="fa fa-clock-o"></i> Nov 25 2017, 9AM - 5PM</li>
+                <li><i class="fa fa-map-marker"></i> вулиця Дмитра Вітовського, 43А, Львів.</li>
+                <li><i class="fa fa-clock-o"></i> Жов 05 2018, 16:00</li>
               </ul>
-              <p>when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. </p>
+              <p>
+                «Park. Art of Rest» - місце розкішного відпочинку в парковій зоні міста!
+              </p>
+              <p>Декілька хвилин  від центру Львова - і Ви опиняєтесь  в  атмосфері спокою, краси, мистецтва та вишуканого смаку. У цьому океані свіжості та простору, посеред  бурхливого, шумного міста, Ви потрапляєте у чарівний світ розважального комплексу «Park. Art of Rest».</p>
               <a class="see-location-btn popup-gmaps" href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2573.6962413668853!2d24.018871115709015!3d49.82937407939458!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x473add630a055555%3A0x4ae032d76a781d89!2sPark.+Art+of+Rest!5e0!3m2!1suk!2sua!4v1533927658339">
                 Подивится на карті <i class="fa fa-angle-right"></i>
               </a>
