--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -143,7 +143,7 @@
   </section>
   <!-- end wedding-couple-section -->
   <!-- start count-down-section -->
-  <section class="count-down-section section-padding parallax" data-bg-image="assets/lviv.jpg" data-speed="7">
+  <section class="count-down-section section-padding parallax" data-bg-image="lviv.jpg" data-speed="7">
     <div class="container">
       <div class="row">
         <div class="col col-md-4">
@@ -256,7 +256,7 @@
   </section>
   <!-- end story-section -->
   <!-- start cta -->
-  <section class="cta section-padding parallax" data-bg-image="assets/celebrate.jpg" data-speed="7">
+  <section class="cta section-padding parallax" data-bg-image="celebrate.jpg" data-speed="7">
     <div class="container">
       <div class="row">
         <div class="col col-xs-12">
@@ -322,7 +322,7 @@
   </section>
   <!-- end events-section -->
   <!-- start rsvp-section -->
-  <section class="rsvp-section section-padding parallax" data-bg-image="assets/form.jpg" data-speed="7" id="rsvp">
+  <section class="rsvp-section section-padding parallax" data-bg-image="form.jpg" data-speed="7" id="rsvp">
     <div class="container">
       <div class="row">
         <div class="col col-xs-12">
