--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -244,7 +244,7 @@
                     А що ж далі…?!
                   </p>
                   <p>
-                    А далі вже нова історія. З щирими посмішками, солодкими поцілунками та запальними танцями…
+                    А далі щирі посмішки, солодкі поцілунки, веселощі та запальні танці!
                   </p>
                 </div>
               </div>
