fix text, but why

--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -126,7 +126,7 @@
                   Спекотне літо - діло таке… пам`ятаєте ці романтичні заходи сонця, п`янкий аромат теплого повітря?!
                   Напевно, час настав. В руках горнятко з квітковим чаєм, а в телефоні відкрита закладка з сайта знайомств…
                 </p>
-                <span class="signature">Юлія (завжди 18)</span>
+                <span class="signature">Юлія</span>
                 <ul class="social-links">
                   <li><a target="_blank" href="https://www.facebook.com/profile.php?id=100008786742672"><i class="fa fa-facebook"></i></a></li>
                   <li><a target="_blank" href="https://www.instagram.com/chornenka/"><i class="fa fa-instagram"></i></a></li>
